--- a/SSDI.RequestMonitoring.UI/Pages/Settings/SystemConfig/SystemConfig_Index.razor
+++ b/SSDI.RequestMonitoring.UI/Pages/Settings/SystemConfig/SystemConfig_Index.razor
@@ -56,6 +56,8 @@
         {
             new SystemConfig { Name = "Divisions", NoOfItems = configs.DivisionCount , Link = "/system-configuration/divisions"},
             new SystemConfig { Name = "Departments", NoOfItems = configs.DepartmentCount , Link = "/system-configuration/departments"},
+            new SystemConfig { Name = "Business Units", NoOfItems = configs.BusinessUnitCount , Link = "/system-configuration/business-units"},
+            new SystemConfig { Name = "Vendors", NoOfItems = configs.VendorCount , Link = "/system-configuration/vendors"},
         }.AsQueryable();
     }
 
